deploy/k8s/global-config/np.kong.yml
#...
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: deny-all
#   namespace: firecrest
# spec:
#   policyTypes:
#   - Ingress
#   - Egress
#   podSelector: {}


kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace-traffic
  namespace: firecrest
spec:
  podSelector: 
    matchLabels:
      role: microservice
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: gateway
    ports: 
      - port: 5001 
             

#...
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: allow-port-8000
#   namespace: firecrest
# spec:
#   policyTypes:
#   - Ingress
#   podSelector:
#     matchLabels:
#       app: kong
#   ingress:
#   - ports:
#     - port: 8000
